# bibtex-monkey

./: Cargo.toml  README.md
src/: crossref.rs  csv.rs  main.rs  record.rs  xlsx.rs
test_data/: test.csv  test.xlsx
