[package]
name = "bibtex-monkey"
version = "0.1.0"
authors = ["Yoav Orot"]
edition = "2021"
description = "A tool for building BibTeX collections"
license = "LGPLv3"
repository = "https://github.com/manzaltu/bibtex-monkey.git"
readme = "README.md"

[dependencies]
anyhow = "1.0.89"
csv = "1.3.0"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
