[package]
name = "bibtex-monkey"
version = "0.2.0"
authors = ["Yoav Orot"]
edition = "2021"
description = "A tool for building BibTeX collections"
license = "LGPLv3"
repository = "https://github.com/manzaltu/bibtex-monkey.git"
readme = "README.md"

[dependencies]
anyhow = "1.0.89"
calamine = "0.26.1"
clap = { version = "4.5.20", features = ["derive", "cargo"] }
console = "0.15.8"
csv = "1.3.0"
indicatif = "0.17.8"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
sanitize-filename = "0.5.0"
serde = { version = "1.0.210", features = ["derive"] }
